--- a/css/spons.css
+++ b/css/spons.css
@@ -192,7 +192,7 @@ header h1{
 	color: #fff;
 }
 #main section.content-item.middle {
-	background-color:#f75f47;
+	background-color:#fff;
 }
 #main section.content-item.middle div h3{
 	color: #000;
