--- a/css/spons.css
+++ b/css/spons.css
@@ -210,7 +210,7 @@ header h1{
 	letter-spacing:3px;
 }
 #main section.content-item.middle div.left p{
-	color: #ff0000;
+	color: #000;
 }
 footer{
 	background-color:#000;
