--- a/css/spons.css
+++ b/css/spons.css
@@ -145,7 +145,7 @@ br.clear {
 header{
 	padding: 45px;
 	/*background: linear-gradient(to left,#0E0E0E,#515151);*/
-	background-color:#000;
+	background-color:#4c3838;
 }
 header h1{
 	color: #fff;
@@ -213,7 +213,7 @@ header h1{
 	color: #000;
 }
 footer{
-	background-color:#000;
+	background-color:#4c3838;
 }
 footer section#top{
 	text-align: right;
