--- a/css/spons.css
+++ b/css/spons.css
@@ -259,11 +259,12 @@ header h1 {
 	font-weight: bold;
 	/* font-family: american_captainregular; */
 	font-family: 'Merriweather Sans', sans-serif;
-	letter-spacing: 1px;
+	letter-spacing: 0px;
 }
 
 #main section.content-item.middle div.left p {
 	color: #000;
+	width:75%;
 }
 
 footer {}
