--- a/css/spons.css
+++ b/css/spons.css
@@ -203,9 +203,11 @@ header h1 {
 }
 
 #main section.content-item img {
-	margin-right: 10%;
+	margin-right: 0;
 }
-
+#main section.content-item.vg img{
+	margin-top:38.6px;
+}
 #main section.content-item div {
 	float: none;
 }
