--- a/css/spons.css
+++ b/css/spons.css
@@ -205,7 +205,7 @@ header h1 {
 #main section.content-item img {
 	margin-right: 0;
 }
-#main section.content-item.vg img{
+#main section.content-item.vg{
 	margin-top:38.6px;
 }
 #main section.content-item div {
