--- a/css/spons.css
+++ b/css/spons.css
@@ -203,14 +203,16 @@ header h1 {
 }
 
 #main section.content-item img {
-	margin-right: 0;
+	margin-right: 10%;
 }
-#main section.content-item div.vg{
-	margin-top:38.6px;
+
+#main section.content-item div {
+	float: none;
 }
-#main section.content-item div.left {
-	float: left;
-	padding-left: 10%;
+
+#main section.content-item div.right {
+	float: right;
+	padding-right: 10%;
 	margin-top: 45.50px;
 }
 
