--- a/css/spons.css
+++ b/css/spons.css
@@ -203,7 +203,7 @@ header h1 {
 }
 
 #main section.content-item img {
-	margin-right: 10%;
+	margin-right: 0;
 }
 
 #main section.content-item div {
